--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.2",
+    "morgan": "^1.10.1",
     "validator": "^13.15.15"
   }
 }
